Improve AGR download.
- Handle user with unit credential
- Download using direct URL

Signed-off-by: Toha <tohenk@yahoo.com>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@ntlab/ntlib": "^1.0.1",
     "@ntlab/webrobot": "^1.0.1",
+    "dom-parser": "^0.1.6",
     "exceljs": "^1.15.0",
     "glob": "^7.1.6",
     "selenium-webdriver": "^4.0"
