Migrate to SIPD RI.
Signed-off-by: Toha <tohenk@yahoo.com>

--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
-    "url":"https://jatimprov.sipd.kemendagri.go.id",
+    "url":"https://sipd-ri.kemendagri.go.id",
     "mode":"download",
+    "provinsi":"CHANGEME",
     "username":"CHANGEME",
     "password":"CHANGEME",
-    "year":"2022"
+    "year":"2024"
 }
